--- a/day_05/demo-thymeleaf/src/main/resources/templates/index.html
+++ b/day_05/demo-thymeleaf/src/main/resources/templates/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" th:href="@{/css/style.css}">
 </head>
 <body>
+    <th:block th:replace="~{fragments/fragment :: menu}"></th:block>
     <h1>hello</h1>
     <ul>
         <li>Id: <th:block th:text="${user.id}"></th:block></li>
@@ -19,22 +20,22 @@
         <li>Email: <th:block th:text="*{email}"></th:block></li>
     </ul>
 
-    <table>
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>Name</th>
-                <th>Email</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr th:each="user : ${userList}">
-                <td th:text="${user.id}"></td>
-                <td th:text="${user.name}"></td>
-                <td th:text="${user.email}"></td>
-            </tr>
-        </tbody>
-    </table>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Id</th>
+                        <th>Name</th>
+                        <th>Email</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr th:each="user : ${userList}">
+                        <td th:text="${user.id}"></td>
+                        <td th:text="${user.name}"></td>
+                        <td th:text="${user.email}"></td>
+                    </tr>
+                </tbody>
+            </table>
 
 </body>
 </html>
