--- a/day_05/course-app/src/main/resources/static/css/admin.css
+++ b/day_05/course-app/src/main/resources/static/css/admin.css
@@ -8,6 +8,7 @@
 
 body {
     font-family: 'Roboto', sans-serif;
+    background-color: #ecf0f6;
 }
 
 img {
@@ -35,26 +36,8 @@ ul {
     width: 120px;
 }
 
-/* Trang danh sách */
-.course-item-image {
-    height: 190px;
-}
-
-.course-item-image img {
+.course-table{
     width: 100%;
-    height: 100%;
-    object-fit: cover;
+    background-color: white;
 }
 
-.course-item-info h2 {
-    height: 48px;
-}
-
-/* Trang chi tiết */
-.supporter-image img {
-    width: 120px;
-    height: 120px;
-    object-fit: cover;
-}
-
-/*custom*/
