--- a/day_05/course-app/src/main/resources/templates/fragments/fragment.html
+++ b/day_05/course-app/src/main/resources/templates/fragments/fragment.html
@@ -56,5 +56,21 @@
         </div>
     </a>
 </div>
+
+<div th:fragment="admin-header" class="header d-flex align-items-center">
+    <div class="container-fluid">
+        <div class="d-flex justify-content-start align-items-center">
+            <div class="logo">
+                <a href="./course-list.html">
+                    <img src="https://techmaster.vn/resources/image/logo-techmaster/white/white_200x74.png" alt="logo">
+                </a>
+            </div>
+            <div class="menu">
+                <a class="text-white text-uppercase ms-5" href="./course">Danh sách khóa học</a>
+                <a class="text-white text-uppercase ms-3" href="./create">Tạo khóa học</a>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
