--- a/day_05/course-app/src/main/resources/templates/admin-detail.html
+++ b/day_05/course-app/src/main/resources/templates/admin-detail.html
@@ -1,80 +1,73 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+      th:replace="~{fragments/layoutAdmin :: admin-layout(~{:: title}, ~{:: #adminCss}, ~{:: #content}, ~{:: #mainjs})}">
 <head>
     <meta charset="UTF-8">
     <title>Admin detail</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <th:block id="adminCss">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+              integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-    <!-- Link icon -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
-          integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
-          crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <!-- Link icon -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+              integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+              crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <link rel="stylesheet" th:href="@{/css/admin.css}">
+        <link rel="stylesheet" th:href="@{/css/admin.css}">
+    </th:block>
 </head>
 <body>
-<div class="header d-flex align-items-center">
-    <div class="container-fluid">
-        <div class="d-flex justify-content-start align-items-center">
-            <div class="logo">
-                <a href="./course-list.html">
-                    <img src="https://techmaster.vn/resources/image/logo-techmaster/white/white_200x74.png" alt="logo">
-                </a>
-            </div>
-            <div class="menu">
-                <a class="text-white text-uppercase ms-5" href="./course">Danh sách khóa học</a>
-                <a class="text-white text-uppercase ms-3" href="./create">Tạo khóa học</a>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="create-container mt-5">
-    <div class="container">
-        <div>
-            <a href="./create"><button class="btn btn-primary">
-                <i class="fa-solid fa-plus"></i>
-                Cập nhật</button></a>
-            <button class="btn btn-info text-white">
-                <i class="fa-solid fa-chevron-left"></i>
-                Quay lại</button>
-        </div>
-        <div class="row create-form mt-4 bg-white">
-            <div class="col-md-8 mt-2 mb-2">
-                <div class="mb-3">
-                    <label for="exampleFormControlInput1" class="form-label fw-bolder mt-2 ms-2">Tên khóa học</label>
-                    <input type="email" class="form-control" id="exampleFormControlInput1" th:value="${detailAdmin.name}">
+    <th:block id="content">
+        <div class="create-container mt-5">
+            <div class="container">
+                <div>
+                    <a href="./create"><button class="btn btn-primary">
+                        <i class="fa-solid fa-plus"></i>
+                        Cập nhật</button></a>
+                    <button class="btn btn-info text-white">
+                        <i class="fa-solid fa-chevron-left"></i>
+                        Quay lại</button>
                 </div>
-                <div class="mb-3">
-                    <label for="description" class="form-label ms-2 fw-bolder">Mô tả</label>
-                    <textarea class="form-control" id="description" rows="10" th:text="${detailAdmin.description}"></textarea>
-                </div>
-            </div>
-            <div class="col-md-4 mt-2 mb-2">
-                <div class="mb-3">
-                    <label class="form-label fw-bolder mt-2 ms-2">Hình thức học</label>
-                    <input type="email" class="form-control" id="examp" th:value="${detailAdmin.type}">
-                </div>
-                <div class="mb-3">
-                    <label class="form-label fw-bolder ms-2">Chủ đề</label>
-                    <input type="email" class="form-control" th:value="${detailAdmin.topics}">
-                </div>
-                <div class="mb-3">
-                    <label class="form-label fw-bolder ms-2">Tư vấn viên</label>
-                    <input type="email" class="form-control" th:value="${detailAdmin.user.name}">
-                </div>
-                <div class="mb-3">
-                    <label class="form-label fw-bolder ms-2">Thumbnail</label>
-                    <img th:src="${detailAdmin.thumbnail}">
+                <div class="row create-form mt-4 bg-white">
+                    <div class="col-md-8 mt-2 mb-2">
+                        <div class="mb-3">
+                            <label for="exampleFormControlInput1" class="form-label fw-bolder mt-2 ms-2">Tên khóa học</label>
+                            <input type="email" class="form-control" id="exampleFormControlInput1" th:value="${detailAdmin.name}">
+                        </div>
+                        <div class="mb-3">
+                            <label for="description" class="form-label ms-2 fw-bolder">Mô tả</label>
+                            <textarea class="form-control" id="description" rows="10" th:text="${detailAdmin.description}"></textarea>
+                        </div>
+                    </div>
+                    <div class="col-md-4 mt-2 mb-2">
+                        <div class="mb-3">
+                            <label class="form-label fw-bolder mt-2 ms-2">Hình thức học</label>
+                            <input type="email" class="form-control" id="examp" th:value="${detailAdmin.type}">
+                        </div>
+                        <div class="mb-3">
+                            <label class="form-label fw-bolder ms-2">Chủ đề</label>
+                            <input type="email" class="form-control" th:value="${detailAdmin.topics}">
+                        </div>
+                        <div class="mb-3">
+                            <label class="form-label fw-bolder ms-2">Tư vấn viên</label>
+                            <input type="email" class="form-control" th:value="${detailAdmin.user.name}">
+                        </div>
+                        <div class="mb-3">
+                            <label class="form-label fw-bolder ms-2">Thumbnail</label>
+                            <img th:src="${detailAdmin.thumbnail}">
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-</div>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
-<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    </th:block>
+
+    <th:block id="mainjs">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+                integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+                crossorigin="anonymous"></script>
+        <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    </th:block>
 
 </body>
 </html>
