--- a/day_05/course-app/src/main/resources/templates/fragments/layoutAdmin.html
+++ b/day_05/course-app/src/main/resources/templates/fragments/layoutAdmin.html
@@ -1,22 +1,21 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org" th:fragment="main-layout(title, css, content, js)">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" th:fragment="admin-layout(title, css, content, js)">
 <head>
     <meta charset="UTF-8">
     <title th:replace="${title}">Title</title>
-<!--    CSS-->
+    <!--    CSS-->
+    <link rel="stylesheet" th:href="@{/css/admin.css}">
     <th:block th:replace="${css} ?: ~{}"></th:block>
 </head>
 <body>
 <!--HEADER-->
-<th:block th:replace="~{fragments/fragment :: menu}"></th:block>
+<th:block th:replace="~{fragments/fragment :: admin-header}"></th:block>
 
 <!--CONTENT-->
 <th:block th:replace="${content} ?: ~{}"></th:block>
 
 <!--FOOTER-->
-<div>
-    <h2>footer</h2>
-</div>
+
 
 <!--JS-->
 <th:block th:replace="${js} ?: ~{}"></th:block>
