--- a/day_05/course-app/src/main/resources/templates/admin-course.html
+++ b/day_05/course-app/src/main/resources/templates/admin-course.html
@@ -1,23 +1,12 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org"
-      th:replace="~{fragments/layoutAdmin :: admin-layout(~{:: title}, ~{:: #adminCss}, ~{:: #content}, ~{:: #mainjs})}">
+      th:replace="~{fragments/layoutAdmin :: admin-layout(~{:: title}, ~{}, ~{:: #content}, ~{})}">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>admin-course</title>
-    <th:block id="adminCss">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-              integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
-        <!-- Link icon -->
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
-              integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
-              crossorigin="anonymous" referrerpolicy="no-referrer" />
-
-        <link rel="stylesheet" th:href="@{/css/admin.css}">
-    </th:block>
 
 </head>
 
@@ -26,14 +15,17 @@
 
         <div class="admin-container mt-5">
             <div class="container ">
-                <div>
-                    <a href="./create"><button class="btn btn-primary">
-                        <i class="fa-solid fa-plus"></i>
-                        Tạo khóa học</button></a>
-                    <button class="btn btn-info text-white">
-                        <i class="fa-solid fa-rotate-right"></i>
-                        Làm mới</button>
+                <div class="mb-4 d-flex justify-content-between">
+                    <div>
+                        <a href="./create"><button class="btn btn-primary">
+                            <i class="fa-solid fa-plus"></i>
+                            Tạo khóa học</button></a>
+                        <button class="btn btn-info text-white">
+                            <i class="fa-solid fa-rotate-right"></i>
+                            Làm mới</button>
+                    </div>
                 </div>
+
                 <div class="course-table mt-4">
                     <table style="width: 100%" class="table table-bordered">
                         <tr>
@@ -44,10 +36,10 @@
                         </tr>
                         <tr th:each="course : ${courselist}">
                             <td th:text="${course.id}"></td>
-                            <td class="text-primary" th:text="${course.name}"></td>
+                            <td class="text-primary" ><a th:href="@{|/admin/course/${course.id}|}" th:text="${course.name}"></a></td>
                             <td th:class="${course.type == 'online' ? 'text-warning' : 'text-info'}" th:text="${course.type == 'online' ? 'online' : 'onlab'}"></td>
                             <td>
-                                <span class="bg-secondary text-white" th:each="topic : ${course.topics}" th:text="${topic}"></span>
+                                <span class="badge bg-secondary me-2" th:each="topic : ${course.topics}" th:text="${topic}"></span>
                             </td>
                         </tr>
                     </table>
@@ -56,12 +48,6 @@
         </div>
     </th:block>
 
-    <th:block id="mainjs">
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-                integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-                crossorigin="anonymous"></script>
-        <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    </th:block>
 </body>
 
 </html>
