--- a/day_05/course-app/src/main/resources/templates/fragments/fragment.html
+++ b/day_05/course-app/src/main/resources/templates/fragments/fragment.html
@@ -66,8 +66,8 @@
                 </a>
             </div>
             <div class="menu">
-                <a class="text-white text-uppercase ms-5" href="./course">Danh sách khóa học</a>
-                <a class="text-white text-uppercase ms-3" href="./create">Tạo khóa học</a>
+                <a class="text-white text-uppercase ms-5" href="/admin/course">Danh sách khóa học</a>
+                <a class="text-white text-uppercase ms-3" href="/admin/create">Tạo khóa học</a>
             </div>
         </div>
     </div>
