--- a/day_05/course-app/src/main/resources/static/css/admin.css
+++ b/day_05/course-app/src/main/resources/static/css/admin.css
@@ -25,7 +25,6 @@ ul {
     list-style-type: none;
 }
 
-
 /* Header style */
 .header {
     height: 60px;
@@ -40,4 +39,15 @@ ul {
     width: 100%;
     background-color: white;
 }
+/* course detail */
+/*.course-logo-preview {*/
+/*    width: 200px;*/
+/*    height: 200px;*/
+/*    border: 2px solid #ddd;*/
+/*}*/
+/*.course-logo-preview img{*/
+/*    width: 100%;*/
+/*    height: 100%;*/
+/*    object-fit: cover;*/
+/*}*/
 
