--- a/day_05/course-app/src/main/resources/templates/admin-detail.html
+++ b/day_05/course-app/src/main/resources/templates/admin-detail.html
@@ -1,60 +1,76 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org"
-      th:replace="~{fragments/layoutAdmin :: admin-layout(~{:: title}, ~{:: #adminCss}, ~{:: #content}, ~{:: #mainjs})}">
+      th:replace="~{fragments/layoutAdmin :: admin-layout(~{:: title}, ~{:: #css}, ~{:: #content}, ~{:: #js})}">
 <head>
     <meta charset="UTF-8">
     <title>Admin detail</title>
-    <th:block id="adminCss">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-              integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
-        <!-- Link icon -->
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
-              integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
-              crossorigin="anonymous" referrerpolicy="no-referrer" />
-
-        <link rel="stylesheet" th:href="@{/css/admin.css}">
+    <th:block id="css">
+        <!-- Link select2 -->
+        <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
     </th:block>
 </head>
 <body>
     <th:block id="content">
         <div class="create-container mt-5">
             <div class="container">
-                <div>
-                    <a href="./create"><button class="btn btn-primary">
-                        <i class="fa-solid fa-plus"></i>
-                        Cập nhật</button></a>
-                    <button class="btn btn-info text-white">
-                        <i class="fa-solid fa-chevron-left"></i>
-                        Quay lại</button>
+                <div class="mb-4 d-flex justify-content-between">
+                    <div>
+                        <a><button id="update-btn" class="btn btn-primary">
+                            <i class="fa-solid fa-plus"></i>
+                            Cập nhật</button></a>
+                        <a href="/admin/course"><button class="btn btn-info text-white">
+                            <i class="fa-solid fa-chevron-left"></i>
+                            Quay lại</button></a>
+                    </div>
+                    <div>
+                        <a href="/admin/course"><button id="delete-course" class="btn text-white btn-danger">
+                            <i class="fa-solid fa-trash"></i>
+                            Xóa
+                        </button></a>
+                    </div>
                 </div>
+
                 <div class="row create-form mt-4 bg-white">
                     <div class="col-md-8 mt-2 mb-2">
                         <div class="mb-3">
-                            <label for="exampleFormControlInput1" class="form-label fw-bolder mt-2 ms-2">Tên khóa học</label>
-                            <input type="email" class="form-control" id="exampleFormControlInput1" th:value="${detailAdmin.name}">
+                            <label for="course-name" class="form-label fw-bolder mt-2 ms-2">Tên khóa học</label>
+                            <input type="text" class="form-control" id="course-name" th:value="${detailAdmin.name}">
                         </div>
                         <div class="mb-3">
-                            <label for="description" class="form-label ms-2 fw-bolder">Mô tả</label>
-                            <textarea class="form-control" id="description" rows="10" th:text="${detailAdmin.description}"></textarea>
+                            <label for="course-description" class="form-label ms-2 fw-bolder">Mô tả</label>
+                            <textarea class="form-control" id="course-description" rows="10" th:text="${detailAdmin.description}"></textarea>
                         </div>
                     </div>
                     <div class="col-md-4 mt-2 mb-2">
                         <div class="mb-3">
-                            <label class="form-label fw-bolder mt-2 ms-2">Hình thức học</label>
-                            <input type="email" class="form-control" id="examp" th:value="${detailAdmin.type}">
+                            <label for="course-type"  class="form-label fw-bolder mt-2 ms-2">Hình thức học</label>
+                            <select id="course-type" class="form-select">
+                                <option selected th:text="${detailAdmin.type} == 'online' ? 'online' : 'onlab'"></option>
+                                <option th:text="${detailAdmin.type} == 'online' ? 'onlab' : 'online' "></option>
+                            </select>
                         </div>
                         <div class="mb-3">
-                            <label class="form-label fw-bolder ms-2">Chủ đề</label>
-                            <input type="email" class="form-control" th:value="${detailAdmin.topics}">
+                            <label for="course-topic"  class="form-label fw-bolder ms-2">Chủ đề</label>
+                            <select class="form-select" id="course-topic" multiple="multiple">
+                                <option th:each="courseTopic : ${detailAdmin.topics}" selected="selected" th:text="${courseTopic}"></option>
+                                <option th:each="topic : ${topicList}" th:unless="${detailAdmin.topics.contains(topic)}" th:value="${topic}" th:text="${topic}"></option>
+                            </select>
                         </div>
                         <div class="mb-3">
-                            <label class="form-label fw-bolder ms-2">Tư vấn viên</label>
-                            <input type="email" class="form-control" th:value="${detailAdmin.user.name}">
+                            <label for="course-supporter" class="form-label fw-bolder ms-2">Tư vấn viên</label>
+                            <select class="form-select" id="course-supporter">
+                                <option selected th:text="${detailAdmin.userId.name}"></option>
+                                <option th:each="user : ${userList}" th:unless="${user.name} == ${detailAdmin.userId.name}" th:value="${user.name}" th:text="${user.name}"></option>
+                            </select>
                         </div>
                         <div class="mb-3">
-                            <label class="form-label fw-bolder ms-2">Thumbnail</label>
-                            <img th:src="${detailAdmin.thumbnail}">
+                            <label for="course-logo-preview" class="form-label fw-bolder ms-2">Thumbnail</label>
+                            <div class="course-logo-preview">
+                                <img class="mb-3" id="course-logo-preview" th:src="${detailAdmin.thumbnail}">
+                            </div>
+
+                            <label for="course-logo-input" class="btn btn-warning">Đổi ảnh</label>
+                                <input type="file" id="course-logo-input" class="d-none">
                         </div>
                     </div>
                 </div>
@@ -62,11 +78,103 @@
         </div>
     </th:block>
 
-    <th:block id="mainjs">
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-                integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-                crossorigin="anonymous"></script>
-        <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <th:block id="js">
+        <!-- select2 -->
+        <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+
+        <script th:inline="javascript">
+            const courseTopics = $("#course-topic");
+            let course = [[${detailAdmin}]];
+            console.log(course);
+
+            // Kích hoạt select2
+            courseTopics.select2({
+                placeholder: "- Chọn chủ đề",
+            });
+
+            // Đổi ảnh thumbnail
+            const courseLogoThumbnail = document.querySelector("#course-logo-preview");
+            const courseLogoBtn = document.querySelector("#course-logo-input");
+
+            courseLogoBtn.addEventListener("change", async (e) =>{
+                //B1: lấy ra file cần upload
+                const file = e.target.files[0];
+                console.log(file);
+
+                //B2: tạo đối tượng formdata
+                const formData = new FormData();
+                formData.append("file", file);
+
+                //B3: gọi api
+                try{
+                    const res = await axios.post("http://localhost:8080/api/vi/files", formData);
+                    console.log(res)
+                    courseLogoThumbnail.src = "http://localhost:8080/".concat(res.data);
+
+                }catch (e){
+                    console.log(e)
+                }
+            });
+            // Xóa khóa học
+            const deleteCourse = document.querySelector("#delete-course");
+            deleteCourse.addEventListener("click", async (e) =>{
+                try{
+                    const res = await axios.delete(`http://localhost:8080/api/v1/admin/courses/${course.id}`)
+                    console.log(res)
+                }catch (e){
+                    console.log(e)
+                }
+            });
+
+            // Cập nhật khóa học
+            const updateBtn = document.querySelector("#update-btn");
+            const inputName = document.querySelector("#course-name");
+            const inputDes = document.querySelector("#course-description");
+            const inputType = document.querySelector("#course-type");
+
+            const inputSupporter = document.querySelector("#course-supporter");
+            updateBtn.addEventListener("click", async (e) => {
+                let courseUpdate = {
+                    name: inputName.value,
+                    description: inputDes.value,
+                    type: inputType.value,
+                    topics: getSelectedValues(),
+                    thumbnail: courseLogoThumbnail.src,
+                    userId: getUserId()
+                }
+                console.log(courseUpdate)
+                try{
+                    const res = await axios.put(`http://localhost:8080/api/v1/admin/courses/${course.id}`,courseUpdate)
+                    console.log(res.data)
+                }catch (e){
+                    console.log(e)
+                }
+
+            })
+            let userList = [[${userList}]];
+            console.log(userList)
+            function getUserId(){
+                const inputUser = document.querySelector("#course-supporter");
+                let userName = inputUser.value;
+                let userId = 0;
+                userList.forEach(e => {
+                    if(e.name === userName) userId=e.id;
+                });
+                return userId;
+            }
+            function getSelectedValues() {
+                const selectElement = document.querySelector("#course-topic");
+                let selectedOptions = [];
+
+                for (let i = 0; i < selectElement.options.length; i++) {
+                    let option = selectElement.options[i];
+                    if (option.selected) {
+                        selectedOptions.push(option.value);
+                    }
+                }
+                return selectedOptions;
+            }
+        </script>
     </th:block>
 
 </body>
