--- a/day_05/course-app/src/main/resources/templates/admin-detail.html
+++ b/day_05/course-app/src/main/resources/templates/admin-detail.html
@@ -15,7 +15,7 @@
             <div class="container">
                 <div class="mb-4 d-flex justify-content-between">
                     <div>
-                        <a><button id="update-btn" class="btn btn-primary">
+                        <a href="/admin/course"><button id="update-btn" class="btn btn-primary">
                             <i class="fa-solid fa-plus"></i>
                             Cập nhật</button></a>
                         <a href="/admin/course"><button class="btn btn-info text-white">
