--- a/day_09/blog-demo/src/main/resources/templates/blogdetail.html
+++ b/day_09/blog-demo/src/main/resources/templates/blogdetail.html
@@ -20,19 +20,10 @@
             </div>
             <ul id="menu">
                 <li>
-                    <a href="s/earch"><span>Search</span></a>
+                    <a href="/search"><span>Search</span></a>
                 </li>
                 <li>
                     <a href="/categories"><span>Tags</span></a>
-                </li>
-                <li>
-                    <a href="project.html"><span>Projects</span></a>
-                </li>
-                <li>
-                    <a href="slide.html"><span>Slides</span></a>
-                </li>
-                <li>
-                    <a href="about.html"><span>About</span></a>
                 </li>
             </ul>
         </nav>
