--- a/day_09/blog-demo/src/main/resources/templates/web/search.html
+++ b/day_09/blog-demo/src/main/resources/templates/web/search.html
@@ -9,8 +9,8 @@
         />
         <title>Search | Kong's Blog</title>
         <link rel=icon href=/img/umaru.PNG> <link rel=icon type=image/png
-        sizes=16x16 href=/img/umaru.PNG> <link rel=icon type=image/png
-        sizes=32x32 href=/img/umaru.PNG>
+                                                  sizes=16x16 href=/img/umaru.PNG> <link rel=icon type=image/png
+                                                                                         sizes=32x32 href=/img/umaru.PNG>
         <link rel="stylesheet" href="/css/style.css" />
     </head>
 
@@ -18,7 +18,7 @@
         <header class="header">
             <nav class="nav">
                 <div class="logo">
-                    <a href="/">Kong.dev</a>
+                    <a href="/static">Kong.dev</a>
                 </div>
                 <ul id="menu">
                     <li>
