--- a/day_09/blog-demo/src/main/resources/templates/web/main.html
+++ b/day_09/blog-demo/src/main/resources/templates/web/main.html
@@ -16,7 +16,7 @@
     <header class="header">
         <nav class="nav">
             <div class="logo">
-                <a href="/">Kong.dev</a>
+                <a href="/static">Kong.dev</a>
             </div>
             <ul id="menu">
                 <li>
