--- a/day_09/blog-demo/src/main/resources/templates/web/page.html
+++ b/day_09/blog-demo/src/main/resources/templates/web/page.html
@@ -16,7 +16,7 @@
     <header class="header">
         <nav class="nav">
             <div class="logo">
-                <a href="/">Kong.dev</a>
+                <a href="/static">Kong.dev</a>
             </div>
             <ul id="menu">
                 <li>
@@ -64,7 +64,7 @@
         <footer class="page-footer">
             <nav class="pagination">
                 <th:block th:if="${currentPage == 2}">
-                    <a class="prev" th:href="@{/}" th:if="not ${pageData.isFirst()}">« Trang trước</a>
+                    <a class="prev" th:href="@{/static}" th:if="not ${pageData.isFirst()}">« Trang trước</a>
                 </th:block>
                 <th:block th:if="not ${currentPage == 2}">
                     <a class="prev" th:href="@{/page/{pageNumber} (pageNumber=${currentPage - 1})}" th:if="not ${pageData.isFirst()}">« Trang trước</a>
