--- a/day_09/blog-demo/src/main/resources/templates/web/tagDetail.html
+++ b/day_09/blog-demo/src/main/resources/templates/web/tagDetail.html
@@ -5,19 +5,18 @@
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no" />
-    <title>Tags | Kong's Blog</title>
-    <link crossorigin="anonymous" href="/css/style.css"
-        rel="preload stylesheet" as="style" />
+    <title>Kong's Blog</title>
     <link rel=icon href=/img/umaru.PNG>
     <link rel=icon type=image/png sizes=16x16 href=/img/umaru.PNG>
     <link rel=icon type=image/png sizes=32x32 href=/img/umaru.PNG>
+    <link rel="stylesheet" href="/css/style.css" />
 </head>
 
 <body class="list" id="top">
     <header class="header">
         <nav class="nav">
             <div class="logo">
-                <a href="/">Kong.dev</a>
+                <a href="/static">Kong.dev</a>
             </div>
             <ul id="menu">
                 <li>
@@ -29,16 +28,26 @@
             </ul>
         </nav>
     </header>
-    <main class="main" >
-        <header class="page-header">
-            <h1>Tags</h1>
+    <main class="main">
+        <header class="entry-header">
+            <h1 style="margin-bottom: 1rem;">Tag : <th:block th:text="${categoryName}"></th:block></h1>
         </header>
-        <ul class="terms-tags">
-            <li th:each="tag : ${categoryList}">
-                <a th:href="@{|categories/${tag.name}|}"> <th:block th:text="${tag.name}"></th:block>
-                    <sup><strong><sup><th:block th:text="${tag.used}"></th:block></sup></strong></sup></a>
-            </li>
-        </ul>
+
+        <article class="post-entry" th:each="blog : ${blogs}">
+            <header class="entry-header">
+                <h2 th:text="${blog.title}">
+                </h2>
+            </header>
+            <div class="entry-content">
+                <p th:text="${blog.content}">
+                </p>
+            </div>
+            <footer class="entry-footer">
+                <span th:text="${#temporals.format(blog.publishedAt, 'dd/MM/yyyy')}">01/02/2023</span>
+            </footer>
+            <a class="entry-link"
+               th:href="@{|/blogs/${blog.id}/${blog.slug}|}"></a>
+        </article>
     </main>
 </body>
 
