--- a/day_09/blog-demo/src/main/resources/templates/admin/blog/index.html
+++ b/day_09/blog-demo/src/main/resources/templates/admin/blog/index.html
@@ -17,17 +17,13 @@
         <div class="content-header">
           <div class="container-fluid">
             <div class="row mb-2">
-              <div class="col-sm-6">
-                <h1 class="m-0">Dashboard</h1>
-              </div>
-              <!-- /.col -->
-              <div class="col-sm-6">
-                <ol class="breadcrumb float-sm-right">
+              <div class="col-sm-12">
+                <ol class="breadcrumb">
                   <li class="breadcrumb-item">
-                    <a href="#">Home</a>
+                    <a href="#">Dashboard</a>
                   </li>
                   <li class="breadcrumb-item active">
-                    Dashboard v1
+                    Danh sách bài viết
                   </li>
                 </ol>
               </div>
@@ -37,7 +33,83 @@
 
         <!-- Main content -->
         <section class="content">
-          <div class="container-fluid"></div>
+          <div class="container-fluid">
+            <div class="row py-2">
+              <div class="col-12">
+                <button type="button" class="btn btn-primary">
+                  <i class="fas fa-plus"></i> Viết bài
+                </button>
+                <button type="button" class="btn btn-info">
+                  <i class="fas fa-redo"></i> Refresh
+                </button>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-12">
+                <div class="card">
+                  <div class="card-body">
+                    <table class="table table-bordered table-hover">
+                      <thead>
+                      <tr>
+                        <th>Tiêu đề</th>
+                        <th>Tác giả</th>
+                        <th>Danh mục</th>
+                        <th>Trạng thái</th>
+                        <th>Ngày tạo</th>
+                      </tr>
+                      </thead>
+                      <tbody>
+                      <tr th:each="blog : ${pageData.getContent()}">
+                        <td>
+                          <a th:href="@{|/admin/blogs/${blog.id}/detail|}" th:text="${blog.title}">Khai giảng khóa
+                            Java Spring Boot 12A
+                            - song song 2 hình
+                            thức offline /
+                            online đáp ứng nhu
+                            cầu đào tạo từ xa</a>
+                        </td>
+                        <td>
+                          <a href="#" th:text="${blog.user.name}">John Doe</a>
+                        </td>
+                        <td>
+                          <span class="badge bg-secondary me-2" th:each="category : ${blog.categoryList}" th:text="${category.name}">
+
+                          </span>
+                        </td>
+                        <td th:text="${blog.status == true ? 'công khai' : 'Nháp'}">Công khai</td>
+                        <td th:text="${#temporals.format(blog.createdAt, 'dd/MM/yyyy')}">06-07-2022</td>
+                      </tr>
+                      </tbody>
+                    </table>
+
+                    <div class="d-flex justify-content-center mt-3" id="pagination" th:if="${pageData.getTotalPages() != 1}">
+                      <ul class="pagination mb-0">
+                        <li class="paginate_button page-item previous"
+                            th:classappend="${currentPage == 1 ? 'disabled' : ''}"
+                            id="example2_previous">
+                          <a th:href="@{/admin/blogs (page=${currentPage - 1})}"
+                             class="page-link">Previous</a>
+                        </li>
+                        <li class="paginate_button page-item"
+                            th:classappend="${number == currentPage ? 'active' : ''}"
+                            th:each="number : ${#numbers.sequence(1, pageData.totalPages)}">
+                          <a th:href="@{/admin/blogs (page=${number})}"
+                             class="page-link"
+                             th:text="${number}">1</a>
+                        </li>
+                        <li class="paginate_button page-item next"
+                            th:classappend="${currentPage == pageData.totalPages ? 'disabled' : ''}"
+                            id="example2_next">
+                          <a th:href="@{/admin/blogs (page=${currentPage + 1})}"
+                             class="page-link">Next</a>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </section>
       </div>
     </th:block>
